# Graphics-OpenGL_Projects

./: .gitignore  test_scene.blend
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Animation.1505617551062.pdom  Bezier.1504303572795.pdom  Camera.1504303572822.pdom  Chaikin.1504303572854.pdom  Colors.1504303572829.pdom  Game World.1505385431822.pdom  Game _World.1505388109717.pdom  HelloWorld.1504303572832.pdom  Merge_sort.1505193638849.pdom  Merge_sort_analysis.1505797429189.pdom  Model.1504303572840.pdom  Pbr.1504303572817.pdom  Prim.1506389300590.pdom  Prim_Parallel.1506398201446.pdom  Sieve.1507540714975.pdom  Stupid Transformation.1504303572837.pdom  Tetris.1505391291157.pdom  Texture.1504303572820.pdom  Transformation.1504303572852.pdom  Window.1504303572857.pdom  language.settings.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: HelloWorld.sc  Merge_sort.sc  Merge_sort_analysis.sc  Prim.sc  Sieve.sc
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 10.snap  11.snap  13.snap  3.snap  5.snap
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
Animation/: .cproject  .project  CMakeLists.txt  TODO  callback.h  camera.h  fog.fs  game_main.h  helpers.h  main.cpp  md5_example.h  model.h  player.h  scene.h  shader_anim.h  shadow_mapping.fs  terrain.h  window.cpp  window.h
Animation/Assets/Models/: boblampclean.md5mesh
Animation/Debug/: .gitignore  Animation  main.d  makefile  objects.mk  sources.mk  subdir.mk  window.d
Animation/Debug/cyborg/: subdir.mk
Animation/Snake/: snake.h  snake_block.h
Animation/Tetris/: block.h  tetris.h
Animation/cyborg/: Guacamaya-2013fb24.md5anim  Guacamaya-2013fb24.md5mesh  IronThrone.mtl  animation_test.dae  bird.mtl  chapter_1.mtl  clock_dial.mtl  crow.mtl  dragon.md5anim  dragon.md5mesh  escape_menu.mtl  frame.mtl  grass.mtl  img.mtl  intro_1.mtl  intro_2.mtl  landscape.mtl  landscape_grass.mtl  landscape_wall.mtl  logo.mtl  menu.mtl  pointer.mtl  raven.mtl  selection_box.mtl  stage1_map.mtl  start.mtl  test.md5anim  test.md5mesh  wagon.DAE  wagon.FBX  wagon.mtl  wolf.md5anim  wolf.md5mesh
Animation/cyborg/maps/: Thumbs.db
Animation/skybox/tetris/: top.tga
Bezier/: .project  callback.h  control.frag  line.frag  main.cpp  model.h  window.cpp
Bezier/Debug/: Bezier  makefile
Camera/: .cproject  .project  fragmentShader.glsl  main.cpp  shader.h  window.cpp
Camera/Debug/: Camera  main.d  makefile  shader.d  subdir.mk
Chaikin/: .cproject  .project  callback.h  main.cpp  mesh.h
Chaikin/Debug/: Chaikin  main.d  makefile  objects.mk
Colors/: .cproject  camera.h  lamp.vs  landscape.mtl  lighting.frag  lighting.vs  main.cpp  mesh.h
Colors/Debug/: Colors  main.d  makefile  objects.mk  subdir.mk
Engine/: .cproject  callback.h  camera.h  landscape.dae  landscape.mtl  lighting.fs  lighting.vs  lighting_n.fs  main.cpp  shader.h
Engine/Debug/: Engine  makefile  subdir.mk
Engine/Debug/res/: subdir.mk
Engine_Game/: .project  callback.h  camera.h  model.h  physics_main.h  window.cpp  window.h
Engine_Game/Debug/: Engine_Game  main.d  makefile
Engine_Game/cyborg/: landscape.mtl
Engine_Shadow/: .cproject  .project  callback.h  main.cpp  model.h  scene.h  shadow_mapping.fs  window.h
Engine_Shadow/Debug/: Engine_Shadow  main.d  makefile
Engine_Shadow/cyborg/: test_scene.mtl
Engine_test/: .cproject  .project  callback.h  lighting.fs  lighting_n.vs  main.cpp  mesh.h  model.h
Engine_test/Debug/: Engine_test  makefile  objects.mk  sources.mk
Engine_test/res/: plane.mtl
GPUSkinning/: .cproject  .project  camera.h  main.cpp  md5_anim_data.h  md5_controller.h  md5_model_data.h  skinning.frag
Game _World/: .project  model.h  physics_main.h
Game _World/Debug/: subdir.mk
GameWorld/: .cproject  TODO  callback.h  fog.vs  scene.h
GameWorld/Debug/: makefile  objects.mk
GameWorld/cyborg/: landscape.mtl
HelloWorld/: .cproject  HelloWorld.cu
HelloWorld/Debug/: HelloWorld  HelloWorld.d  makefile  subdir.mk
Merge_sort/: .cproject  .project  help.h  main.cu  util.h
Merge_sort/Debug/: Merge_sort  main.d  makefile  subdir.mk
Merge_sort_analysis/: .project  main.cu  thread32_size.txt  util.h
Model/: .cproject  .project  lamp.frag  main.cpp  mesh.h  model.h  modelLoading.frag  modelLoading.vs  shader.h
Model/Debug/: Model  main.d  makefile  objects.mk  sources.mk  subdir.mk
Model/lincoln/: untitled.mtl
Pbr/: .cproject  .project  callback.h  main.cpp  mesh.h  model.h  shader.h  stone.mtl  window.h
Pbr/Debug/: Pbr  makefile  objects.mk  subdir.mk
Prim/: .cproject  .project  main.cu
Prim_Parallel/: .cproject  .project  main.cu
Shadow/: .project  3.2.2.point_shadows.fs  3.2.2.point_shadows.vs  main.cpp  mesh.h  model.h
Shadow/Debug/: Shadow  main.d  makefile  objects.mk
Shadow/cyborg/: test_scene.mtl
Sieve/: main.cu
Stupid Transformation/: .cproject  .project  camera.h  main.cpp  model.h  shader.h  suzanne.mtl
Stupid Transformation/Debug/: Stupid Transformation  makefile  subdir.mk
TestAnim/: .cproject  .project  Animation.cpp  Animation.h  AnimationChannel.cpp  AnimationChannel.h  AnimationController.cpp  AnimationController.h  Bone.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  cylinder.dae  fragment.glsl  vertex.glsl
TestAnim/Debug/: Animation.d  AnimationChannel.d  AnimationController.d  Bone.d  makefile  subdir.mk
Tetris/: main.cpp  mesh.h  shader.h  shadow_mapping.vs
Tetris/Debug/: Tetris  makefile
Tetris/cyborg/: animation_test.dae  box.mtl  sphere.mtl
Texture/: .project  main.cpp  vertexShader.glsl  window.h
Texture/Debug/: Texture  main.d  makefile
Transformation/: .project  callback.h  main.cpp  shader.cpp
Transformation/Debug/: Transformation  makefile
Window/: .project  fragmentShader.glsl  main.cpp  shader.cpp  vertexShader.glsl
Window/Debug/: Window  makefile  objects.mk
(+217 files in other folders)
