cmake_minimum_required(VERSION 3.12)
project(Animation)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}" ${CMAKE_MODULE_PATH})

include_directories(.)
include_directories(Snake)
include_directories(Tetris)
include_directories(/sw/include/SOIL)
include_directories(/sw/lib)

find_package(GLEW REQUIRED)
find_package(glfw3 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(ASSIMP REQUIRED)
find_package(SOIL REQUIRED)
find_package(SFML REQUIRED system window graphics network audio)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    link_libraries(${SFML_LIBRARIES})
endif()
if (GLEW_FOUND)
    include_directories(${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS})
    link_libraries(${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARIES} ${SOIL_LIBRARY} glfw)
endif()

add_executable(Animation
        Assets/Animations/boblampclean.md5anim
        Assets/Models/boblampclean.md5mesh
        Assets/Textures/guard1_body.png
        Assets/Textures/guard1_face.png
        Assets/Textures/guard1_helmet.png
        Assets/Textures/iron_grill.png
        Assets/Textures/round_grill.png
        cyborg/box/box.jpg
        cyborg/box/box_bumpmap.jpg
        cyborg/box/box_SPEC.jpg
        cyborg/box/frame.png
        cyborg/grass/albedo.png
        cyborg/grass/ao.png
        cyborg/grass/metallic.png
        cyborg/grass/normal.png
        cyborg/grass/roughness.png
        "cyborg/maps/difuse map.png"
        "cyborg/maps/normal map.png"
        cyborg/maps/Thumbs.db
        cyborg/plastic/albedo.png
        cyborg/plastic/ao.png
        cyborg/plastic/metallic.png
        cyborg/plastic/normal.png
        cyborg/plastic/roughness.png
        cyborg/rusted_iron/albedo.png
        cyborg/rusted_iron/ao.png
        cyborg/rusted_iron/metallic.png
        cyborg/rusted_iron/normal.png
        cyborg/rusted_iron/roughness.png
        cyborg/wood/bamboo-wood-semigloss-albedo.png
        cyborg/wood/bamboo-wood-semigloss-metal.psd
        cyborg/wood/bamboo-wood-semigloss-normal.png
        cyborg/wood/clock_face.png
        cyborg/wood/ClockFaceBackTexture.jpg
        cyborg/aile.png
        cyborg/albedo.png
        cyborg/animation_test.dae
        cyborg/bird.mtl
        cyborg/bird.obj
        cyborg/bird.png
        cyborg/body.png
        cyborg/box.jpg
        cyborg/box.jpg.001.jpg
        cyborg/box.mtl
        cyborg/box.obj
        cyborg/box_bumpmap.jpg
        cyborg/box_bumpmap.jpg.001.jpg
        cyborg/box_SPEC.jpg
        cyborg/box_SPEC.jpg.001.jpg
        cyborg/Canvas_A.png
        cyborg/Canvas_G.png
        cyborg/Canvas_N.png
        cyborg/Canvas_S.png
        cyborg/cb32b5b83dc5d99375168593a103420b.jpg
        cyborg/chapter_1.jpg
        cyborg/chapter_1.mtl
        cyborg/chapter_1.obj
        cyborg/clock_dial.mtl
        cyborg/clock_dial.obj
        cyborg/crow.mtl
        cyborg/crow.obj
        cyborg/cyborg.blend
        cyborg/cyborg.blend1
        cyborg/cyborg.mtl
        cyborg/cyborg.obj
        cyborg/cyborg_diffuse.png
        cyborg/cyborg_normal.png
        cyborg/cyborg_specular.png
        cyborg/dagger.png
        cyborg/dragon.jpg
        cyborg/dragon.md5anim
        cyborg/dragon.md5mesh
        cyborg/dragon.png
        cyborg/escape_menu.mtl
        cyborg/escape_menu.obj
        cyborg/escape_menu.png
        cyborg/frame.mtl
        cyborg/frame.obj
        cyborg/Frame_A.png
        cyborg/Frame_G.png
        cyborg/Frame_N.png
        cyborg/Frame_S.png
        cyborg/GlassDagger_SK.png
        cyborg/grass.mtl
        cyborg/grass.obj
        cyborg/grass01.png
        cyborg/grass02.png
        cyborg/Guacamaya-2013fb24.md5anim
        cyborg/Guacamaya-2013fb24.md5mesh
        cyborg/gw_body.png
        cyborg/img.mtl
        cyborg/img.obj
        cyborg/img.png
        cyborg/intro_1.jpg
        cyborg/intro_1.mtl
        cyborg/intro_1.obj
        cyborg/intro_2.jpg
        cyborg/intro_2.mtl
        cyborg/intro_2.obj
        cyborg/IronThrone.mtl
        cyborg/IronThrone.obj
        cyborg/IronThrone_Diff.tga
        cyborg/IronThrone_NRM.tga
        cyborg/landscape.mtl
        cyborg/landscape.obj
        cyborg/landscape_grass.mtl
        cyborg/landscape_grass.obj
        cyborg/landscape_SpecLM.png
        cyborg/landscape_TN.png
        cyborg/landscape_TX.png
        cyborg/landscape_wall.mtl
        cyborg/landscape_wall.obj
        cyborg/LICENSE.txt
        cyborg/logo.mtl
        cyborg/logo.obj
        cyborg/logo.png
        "cyborg/Medieval tower_mid_Col.jpg"
        "cyborg/Medieval tower_mid_Nor.jpg"
        "cyborg/Medieval tower_mid_Spec.jpg"
        cyborg/menu.mtl
        cyborg/menu.obj
        cyborg/menu.png
        cyborg/MetalBa.jpg
        cyborg/metallic.png
        cyborg/normal.png
        cyborg/OBJ_Crow_D.tga
        cyborg/plane.mtl
        cyborg/plane.obj
        cyborg/pointer.mtl
        cyborg/pointer.obj
        cyborg/raven.mtl
        cyborg/raven.obj
        cyborg/raven.png
        cyborg/select.png
        cyborg/selection_box.mtl
        cyborg/selection_box.obj
        cyborg/sphere.mtl
        cyborg/sphere.obj
        cyborg/stage1_map.mtl
        cyborg/stage1_map.obj
        cyborg/start.mtl
        cyborg/start.obj
        cyborg/start.png
        cyborg/test.md5anim
        cyborg/test.md5mesh
        cyborg/test_scene.mtl
        cyborg/test_scene.obj
        cyborg/wagon.DAE
        cyborg/wagon.FBX
        cyborg/wagon.mtl
        cyborg/wagon.obj
        cyborg/wall.jpg
        cyborg/wall_normal.jpg
        cyborg/wall_normal.png
        cyborg/wall_tex.jpg
        cyborg/wall_tex.png
        cyborg/Wheel_A.png
        cyborg/Wheel_N.png
        cyborg/Wheel_S.png
        cyborg/wolf.md5anim
        cyborg/wolf.md5mesh
        cyborg/wood.png
        Debug/cyborg/subdir.mk
        Debug/Animation
        Debug/main.d
        Debug/main.o
        Debug/makefile
        Debug/objects.mk
        Debug/sources.mk
        Debug/subdir.mk
        Debug/Tetris
        Debug/window.d
        Debug/window.o
        skybox/normal/back.jpg
        skybox/normal/bottom.jpg
        skybox/normal/front.jpg
        skybox/normal/left.jpg
        skybox/normal/right.jpg
        skybox/normal/top.jpg
        skybox/tetris/back.tga
        skybox/tetris/bottom.tga
        skybox/tetris/front.tga
        skybox/tetris/left.tga
        skybox/tetris/right.tga
        skybox/tetris/top.tga
        Snake/snake.h
        Snake/snake_block.h
        sound/drop_beep.wav
        sound/menu_enter.wav
        sound/menu_theme.wav
        sound/spin.wav
        sound/theme_north.wav
        sound/wind.wav
        Tetris/block.h
        Tetris/tetris.h
        callback.h
        camera.h
        debug_quad.vs
        debug_quad_depth.fs
        fog.fs
        fog.vs
        game_main.h
        helpers.h
        main.cpp
        md5_anim_data.h
        md5_controller.h
        md5_example.h
        md5_model_data.h
        mesh.h
        model.h
        physics_main.h
        player.h
        save.dat
        scene.h
        shader.h
        shader_2d.fs
        shader_2d.vs
        shader_anim.h
        shadow_mapping.fs
        shadow_mapping.vs
        shadow_mapping_depth.fs
        shadow_mapping_depth.vs
        skinning.frag
        skinning.vert
        skybox.fs
        skybox.vs
        terrain.h
        texture_anim.h
        TODO
        window.cpp
        window.h)
